--- a/store/blocks/estaticas/corporativo.jsonc
+++ b/store/blocks/estaticas/corporativo.jsonc
@@ -67,7 +67,7 @@
     },
     "rich-text#corporativos-content": {
         "props": {
-            "text": "Call us at the number (212) 1234-1234."
+            "text": ""
         }
     },
     // columna 2
