--- a/store/blocks/footer/footer.jsonc
+++ b/store/blocks/footer/footer.jsonc
@@ -183,7 +183,7 @@
         },
         {
           "name": "Twitter",
-          "url": "https://twitter.com/cutisdrogueria?lang=es"
+          "url": "https://co.linkedin.com/company/cutis-sa"
         },
         {
           "name": "Youtube",
